# cppLontium

./: .clang-format  .gitignore  CMakeLists.txt  Config.h  GpioDevice.cpp  GpioDevice.h  I2cDevice.cpp  I2cDevice.h  LontiumDevice.cpp  LontiumDevice.h  Utils.cmake  cxxopts.hpp  main.cpp
Include/: GpioDevice.h  I2cDevice.h  LontiumConfig.h  LontiumDevice.h  VideoInfo.h
Source/: GpioDevice.cpp  I2cDevice.cpp  LontiumDevice.cpp
